--- a/WebApp_Test/Views/Shared/_Header.cshtml
+++ b/WebApp_Test/Views/Shared/_Header.cshtml
@@ -1,4 +1,5 @@
-﻿<header class="main-header">
+﻿
+<header class="main-header">
     <!-- Logo -->
     <a href="@Url.Action("Dashboardv1", "Dashboard")" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
@@ -218,18 +219,31 @@
                 </li>
                 <!-- User Account: style can be found in dropdown.less -->
                 <li class="dropdown user user-menu">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="~/Content/adminlte/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                        <span class="hidden-xs">Alexander Pierce</span>
-                    </a>
+                  @if (Request.IsAuthenticated)
+                  {  
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                      
+                         <img src="~/Content/adminlte/img/user2-160x160.jpg" class="user-image" alt="User Image">
+                        <span class="hidden-xs">
+                        
+                       
+                            <b>@User.Identity.Name </b>
+                        </span>
+                         </a>}
                     <ul class="dropdown-menu">
                         <!-- User image -->
                         <li class="user-header">
-                            <img src="~/Content/adminlte/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                            @if (Request.IsAuthenticated)
+                            {
+                                <img src="~/Content/adminlte/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                             <p>
-                                Alexander Pierce - Web Developer
+                                
+                               
+                                    <b>@User.Identity.Name </b> <small> - Developer </small>
+                                
                                 <small>Member since Nov. 2012</small>
                             </p>
+                            } 
                         </li>
                         <!-- Menu Body -->
                         <li class="user-body">
