--- a/WebApp_Test/Views/Shared/_LayoutTop.cshtml
+++ b/WebApp_Test/Views/Shared/_LayoutTop.cshtml
@@ -151,23 +151,30 @@
                                 </ul>
                             </li>
                             <!-- User Account Menu -->
-                            <li class="dropdown user user-menu">
+                           @if (Request.IsAuthenticated)
+                           { <li class="dropdown user user-menu">
                                 <!-- Menu Toggle Button -->
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                     <!-- The user image in the navbar-->
                                     <img src="~/Content/adminlte/img/user2-160x160.jpg" class="user-image" alt="User Image">
                                     <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                                    <span class="hidden-xs">Alexander Pierce</span>
+                                    <span class="hidden-xs"> 
+                                   
+                                        <b>@User.Identity.Name </b>
+                                   </span>
                                 </a>
                                 <ul class="dropdown-menu">
                                     <!-- The user image in the menu -->
-                                    <li class="user-header">
+                                  @if (Request.IsAuthenticated)
+                                  {  <li class="user-header">
                                         <img src="~/Content/adminlte/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                                         <p>
-                                            Alexander Pierce - Web Developer
+                                           
+                                                <b>@User.Identity.Name </b> <small> - Developer </small>
+                                             
                                             <small>Member since Nov. 2012</small>
                                         </p>
-                                    </li>
+                                    </li>}
                                     <!-- Menu Body -->
                                     <li class="user-body">
                                         <div class="row">
@@ -193,7 +200,7 @@
                                         </div>
                                     </li>
                                 </ul>
-                            </li>
+                            </li> }
                         </ul>
                     </div>
                     <!-- /.navbar-custom-menu -->
