--- a/WebApp_Test/Views/Shared/_Sidebar.cshtml
+++ b/WebApp_Test/Views/Shared/_Sidebar.cshtml
@@ -41,7 +41,7 @@
                     </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li class="@Html.IsSelected(action: "Index")"><a href="@Url.Action("Index", "Articles")"><i></i> All Articles </a></li>
+                    <li class="@Html.IsSelected(action: "Index")"><a href="@Url.Action("Index", "Articles")"><i class="fa fa-circle-o"></i> All Articles </a></li>
                     <li class="@Html.IsSelected(action: "Create")"><a href="@Url.Action("Create", "Articles")"><i class="fa fa-circle-o"></i> New Articles</a></li>
 
                 </ul>
