--- a/WebApp_Test/Views/articles/Details.cshtml
+++ b/WebApp_Test/Views/articles/Details.cshtml
@@ -15,7 +15,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            <b>  @Html.DisplayFor(model => model.Name)</b>
         </dd>
 
         <dt>
@@ -23,7 +23,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Body)
+            <pre>@Model.Body</pre>
         </dd>
 
         <dt>
