--- a/WebApp_Test/Views/articles/Create.cshtml
+++ b/WebApp_Test/Views/articles/Create.cshtml
@@ -26,12 +26,12 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Body, new { htmlAttributes = new { @class = "form-control",rows = "3" } })
+                @Html.TextAreaFor(model => model.Body, 10, 120, htmlAttributes: new { @class = "form-control", style = "width: 100%; max-width: 100%;" }) 
                 @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        
+       
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
