Sort for JS File In BundleConfig.cs
Add Summary For All Class And Method

Delete system.codedom Tag from Web.config

Comment Of Line Scrips.Render("~/bundles/jqueryval") For .cshtml Files

--- a/WebApp_Test/Views/Shared/_Layout.cshtml
+++ b/WebApp_Test/Views/Shared/_Layout.cshtml
@@ -35,7 +35,11 @@
    
 
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/lib")
+    @Scripts.Render("~/bundles/Gen_lib")
+@Scripts.Render("~/bundles/Flot_lib")
+@Scripts.Render("~/bundles/Boot_lib")
+@Scripts.Render("~/bundles/Other_lib")
+ 
     @RenderSection("scripts", required: false)
 </body>
 </html>
