--- a/WebApp_Test/Views/articles/Edit.cshtml
+++ b/WebApp_Test/Views/articles/Edit.cshtml
@@ -50,5 +50,5 @@
 @Html.Partial("_DownX")
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @*@Scripts.Render("~/bundles/jqueryval")*@
 }
