--- a/WebApp_Test/Views/articles/Index.cshtml
+++ b/WebApp_Test/Views/articles/Index.cshtml
@@ -61,14 +61,14 @@
     <script type="text/javascript">
   $(document).ready(function () {
     $('#T1').DataTable()
-    $('#T2').DataTable({
-      'paging'      : true,
-      'lengthChange': false,
-      'searching'   : false,
-      'ordering'    : true,
-      'info'        : true,
-      'autoWidth'   : false
-    })
+    //$('#T2').DataTable({
+    //  'paging'      : true,
+    //  'lengthChange': false,
+    //  'searching'   : false,
+    //  'ordering'    : true,
+    //  'info'        : true,
+    //  'autoWidth'   : false
+    //})
   })
     </script>
 
