--- a/WebApp_Test/Views/articles/Create.cshtml
+++ b/WebApp_Test/Views/articles/Create.cshtml
@@ -48,5 +48,5 @@
 @Html.Partial("_DownX")
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @*@Scripts.Render("~/bundles/jqueryval")*@
 }
