--- a/WebApp_Test/Views/Shared/_Sidebar.cshtml
+++ b/WebApp_Test/Views/Shared/_Sidebar.cshtml
@@ -1,4 +1,7 @@
-﻿    <!-- Left side column. contains the logo and sidebar -->
+﻿@using WebApp_Test.Models.Tools   
+
+
+ <!-- Left side column. contains the logo and sidebar -->
 <aside class="main-sidebar">
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
@@ -33,8 +36,35 @@
         <!-- sidebar menu: : style can be found in sidebar.less -->
         <ul class="sidebar-menu" data-widget="tree">
             <li class="header">MAIN NAVIGATION</li>
+            @if (User.IsInRole(Users_Type.Admin.ToString()))
+            {
+            <li class="@Html.IsSelected(controller: "Account") treeview">
+                <a href="@Url.Action("Index", "Account")">
+                    <i class="fa fa-users"></i> <span>Users</span>
+                    <span class="pull-right-container">
+                        <i class="fa fa-angle-left pull-right"></i>
+                    </span>
+                </a>
+                <ul class="treeview-menu">
+                    <li class="@Html.IsSelected(action: "Index")"><a href="@Url.Action("Index", "Account")"><i class="fa fa-circle-o"></i> All Users </a></li>
+                    <li class="@Html.IsSelected(action: "Register")"><a href="@Url.Action("Register", "Account")"><i class="fa fa-circle-o"></i> New User</a></li>
+
+                </ul>
+
+
+
+
+            </li>
+            }
+             @if (Request.IsAuthenticated)
+            {
+                <li class="@Html.IsSelected(action: "Edit_Prof",controller:"Account") fa users-cog fa-circle-o">
+                    <a href="@Url.Action("Edit_Prof","Account")" class="btn btn-defauls">My Profile</a>
+                </li>
+            }
+
             <li class="@Html.IsSelected(controller: "Articles") treeview">
-                <a href="@Url.Action("Articles", "Articles")">
+                <a href="@Url.Action("Index", "Articles")">
                     <i class="fa fa-dashboard"></i> <span>Articles</span>
                     <span class="pull-right-container">
                         <i class="fa fa-angle-left pull-right"></i>
@@ -50,7 +80,10 @@
                     
                   
             </li>
-            <li class="fa fa-circle-o"">
+           
+           
+            
+<li class="fa fa-circle-o">
     @Html.Partial("_LoginPartial")
 </li>
             </ul>
